1.添加Demo； 2.Demo中添加NavigationView示例; 3.优化Library与app的依赖。

--- a/ruins/src/main/res/values/color.xml
+++ b/ruins/src/main/res/values/color.xml
@@ -20,6 +20,7 @@
     <!--浅白色-->
     <color name="light_white">#fcfdfd</color>
     <!--粉色-->
+    <color name="pink"> #F49AB4</color>
     <!--dark粉红-->
     <!--浅粉色-->
     <!--黑色-->
