--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,4 +17,14 @@
         android:gravity="center"
         android:text="@string/NavigationView"
        />
+    <TextView
+        android:id="@+id/tv_openGallery"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_margin="10dp"
+        android:background="@color/blue"
+        android:textColor="@color/white"
+        android:gravity="center"
+        android:text="@string/open_Gallery"
+        />
 </LinearLayout>
