--- a/ruins/src/main/res/values/color.xml
+++ b/ruins/src/main/res/values/color.xml
@@ -20,7 +20,7 @@
     <!--浅白色-->
     <color name="light_white">#fcfdfd</color>
     <!--粉色-->
-    <color name="pink"> #F49AB4</color>
+    <!--<color name="pink"> #F49AB4</color>-->
     <!--dark粉红-->
     <!--浅粉色-->
     <!--黑色-->
