--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,4 +27,15 @@
         android:gravity="center"
         android:text="@string/open_Gallery"
         />
+    <TextView
+        android:id="@+id/tv_transition"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_margin="10dp"
+        android:background="@color/blue"
+        android:textColor="@color/white"
+        android:gravity="center"
+        android:text="@string/transition"
+        />
+
 </LinearLayout>
