--- a/ruins/src/main/res/layout/layout_material_design_dialog.xml
+++ b/ruins/src/main/res/layout/layout_material_design_dialog.xml
@@ -10,7 +10,7 @@
     >
 
   <ImageView
-      android:id="@+id/custom_image"
+      android:id="@+id/img_custom"
       android:layout_width="53dp"
       android:layout_height="53dp"
       android:layout_marginTop="5dp"
@@ -20,7 +20,7 @@
       />
 
   <FrameLayout
-      android:id="@+id/error_frame"
+      android:id="@+id/frame_error"
       android:layout_width="53dp"
       android:layout_height="53dp"
       android:layout_marginTop="5dp"
@@ -28,7 +28,7 @@
       >
 
     <ImageView
-        android:id="@+id/error"
+        android:id="@+id/img_error"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:contentDescription="@string/app_name"
@@ -39,7 +39,7 @@
   </FrameLayout>
 
   <FrameLayout
-      android:id="@+id/empty_frame"
+      android:id="@+id/frame_empty"
       android:layout_width="53dp"
       android:layout_height="53dp"
       android:layout_marginTop="5dp"
@@ -47,7 +47,7 @@
       >
 
     <ImageView
-        android:id="@+id/empty"
+        android:id="@+id/img_empty"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:contentDescription="@string/app_name"
@@ -58,7 +58,7 @@
   </FrameLayout>
 
   <FrameLayout
-      android:id="@+id/success_frame"
+      android:id="@+id/frame_success"
       android:layout_width="53dp"
       android:layout_height="53dp"
       android:layout_marginTop="5dp"
@@ -66,7 +66,7 @@
       >
 
     <ImageView
-        android:id="@+id/success"
+        android:id="@+id/img_success"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:contentDescription="@string/app_name"
@@ -77,7 +77,7 @@
   </FrameLayout>
 
   <FrameLayout
-      android:id="@+id/warning_frame"
+      android:id="@+id/frame_warning"
       android:layout_width="53dp"
       android:layout_height="53dp"
       android:layout_marginTop="5dp"
@@ -85,7 +85,7 @@
       >
 
     <ImageView
-        android:id="@+id/warning"
+        android:id="@+id/img_warning"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:contentDescription="@string/app_name"
@@ -96,7 +96,7 @@
   </FrameLayout>
 
   <FrameLayout
-      android:id="@+id/progress_frame"
+      android:id="@+id/frame_progress"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_gravity="center"
@@ -106,10 +106,11 @@
       >
 
     <ProgressBar
-        android:id="@+id/progressWheel"
+        android:id="@+id/progressBar"
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:layout_gravity="center"
+        style="@style/Widget.AppCompat.ProgressBar"
         />
   </FrameLayout>
 
@@ -123,7 +124,7 @@
       />
 
   <TextView
-      android:id="@+id/content_text"
+      android:id="@+id/tv_content"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="10dp"
